--- a/src/index.css
+++ b/src/index.css
@@ -733,20 +733,20 @@ body::-webkit-scrollbar-thumb {
   display: flex;
 }
 
-#projects .projects_transition .transition_right {
-  width: 50%;
-  height: 10vh;
-  background-color: #404040;
-  -webkit-clip-path: polygon(0 100%, 0 0, 100% 100%);
-          clip-path: polygon(0 100%, 0 0, 100% 100%);
-}
-
 #projects .projects_transition .transition_left {
   width: 50%;
   height: 10vh;
   background-color: #404040;
-  -webkit-clip-path: polygon(100% 100%, 100% 0, 0 100%);
-          clip-path: polygon(100% 100%, 100% 0, 0 100%);
+  -webkit-clip-path: polygon(0 101%, 0 0, 100% 101%);
+          clip-path: polygon(0 101%, 0 0, 100% 101%);
+}
+
+#projects .projects_transition .transition_right {
+  width: 50%;
+  height: 10vh;
+  background-color: #404040;
+  -webkit-clip-path: polygon(100% 101%, 100% 0, 0 101%);
+          clip-path: polygon(100% 101%, 100% 0, 0 101%);
 }
 
 .projectCard_container {
